--- a/smart-city/src/main/res/values/strings.xml
+++ b/smart-city/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="welcome_title">Welcome to Smart City</string>
+    <string name="welcome_message">Long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text long text </string>
+    <string name="welcome_button">Start</string>
+
+    <string name="title_picture">take a picture</string>
+    <string name="title_comment">comment</string>
 </resources>
