--- a/smart-city/src/main/res/values/strings.xml
+++ b/smart-city/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
 
     <string name="comment_hint">comment…</string>
     <string name="send_button">Send</string>
+
+    <string name="gps_network_not_enabled">The location service or the network are not enabled !</string>
+    <string name="open_location_settings">Settings</string>
+    <string name="retry">Retry</string>
 </resources>
