--- a/smart-city/src/main/res/values/strings.xml
+++ b/smart-city/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="gps_network_not_enabled">The location service or the network are not enabled !</string>
     <string name="open_location_settings">Settings</string>
     <string name="retry">Retry</string>
+
+    <string-array name="types_array">
+        <item>Type...</item>
+        <item>type 1</item>
+        <item>type 2</item>
+    </string-array>
 </resources>
